--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ru.iooko</groupId>
-	<artifactId>meteo</artifactId>
+	<artifactId>springbootjwt</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>High-Precision-Meteorological-Sensor</name>
-	<description>Reading data from a high-precision meteorological sensor</description>
+	<name>SpringBootJwt</name>
+	<description>Spring Boot JWT implementation</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -46,7 +46,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
